--- a/ex01/ex01/index.html
+++ b/ex01/ex01/index.html
@@ -8,9 +8,9 @@
 	<h1>Welcome to the Lounge</h1>
 	<img src="./images/drinks.gif"/>
 	<p>
-		라운지에서 시원한 [링크:elixir]건강 음료[/링크], 
-		동료들과의 대화로 하루 스트레스를 확 날려 버리세요. 
-		편안한 음악도 감상하세요. 
+		라운지에서 시원한 <a href="./elixir.html">건강 음료</a>, 
+		동료들과의 대화로 하루 스트레스를 확 날려 버리세요. <br>
+		편안한 음악도 감상하세요. <Br>
 		무선인터넷에도 언제든지 접속 가능합니다. 
 	</p>
 
