--- a/ex01/ex01/elixir.html
+++ b/ex01/ex01/elixir.html
@@ -6,34 +6,43 @@
   </head>
   <body>
     <h1>건강음료</h1>
-    <div> 
-      <h2>Green Tea Cooler</h2>
-      <img src="./images/green.jpg" title="녹색" alt="초록이다">
-      <p>
-        Chock full of vitamins and minerals, this elixir combines the healthful benefits of green tea with a twist of chamomile blossoms and ginger root.
-      </p>
-    </div>
-    <div> 
-      <h2>Raspberry Ice Concentration</h2>
-      <img src="./images/lightblue.jpg" title="파랑" alt="파랑이다">
-      <p>
-        Combining raspberry juice with lemon grass, citrus peel and rosehips, this icy drink will make your mind feel clear and crisp.
-      </p>
-    </div> 
-    <div> 
-      <h2>Blueberry Bliss Elixir</h2>
-      <img src="images/blue.jpg"/>
-      <p>
-      Blueberries and cherry essence mixed into a base of elderflower herb tea will put you in a relaxed state of bliss in no time.
-      </p>
-    </div>
-    <div> 
-      <h2>Cranberry Antioxidant Blast</h2>
-      <img src="./images/red.jpg">
-      <p>
-      Wake up to the flavors of cranberry and hibiscus in this vitamin C rich elixir.
-      </p>
-    </div>
+    <!--메뉴를 리스트화-->
+    <ul>
+
+      <li><a href="#green">green</a> </li>
+      <li><a href="#lightblue">lightblue</a> </li>
+      <li><a href="#blue">blue</a> </li>
+      <li><a href="#red">red</a> </li>
+
+      <div id="green"> 
+        <h2>Green Tea Cooler</h2>
+        <img src="./images/green.jpg" title="녹색" alt="초록이다">
+        <p>
+          Chock full of vitamins and minerals, this elixir combines the healthful benefits of green tea with a twist of chamomile blossoms and ginger root.
+        </p>
+       </div>
+      <div id="lightblue"> 
+        <h2>Raspberry Ice Concentration</h2>
+        <img src="./images/lightblue.jpg" title="파랑" alt="파랑이다">
+        <p>
+          Combining raspberry juice with lemon grass, citrus peel and rosehips, this icy drink will make your mind feel clear and crisp.
+        </p>
+      </div> 
+      <div id="blue"> 
+        <h2>Blueberry Bliss Elixir</h2>
+        <img src="images/blue.jpg"/>
+        <p>
+        Blueberries and cherry essence mixed into a base of elderflower herb tea will put you in a relaxed state of bliss in no time.
+        </p>
+      </div>
+      <div id="red"> 
+        <h2>Cranberry Antioxidant Blast</h2>
+        <img src="./images/red.jpg">
+        <p>
+        Wake up to the flavors of cranberry and hibiscus in this vitamin C rich elixir.
+        </p>
+      </div>
+  </ul>
     <a href="./index.html">메인으로 돌아가기</a>
   </body>
 </html>
