--- a/ex01/ex01/form.html
+++ b/ex01/ex01/form.html
@@ -6,10 +6,42 @@
     </head>
     <body>
         <h1>멤버쉽 가입</h1>
+        <form name="registerForm"
+                method="POST"
+                action="/register.html">
+            <fieldset><!--입력양식을 그룹화-->
+                <legend>회원가입</legend>
+                <label for="userId ">아이디</label>
+                <input type="text" name="userid" id="userid" placeholder="아이디를 입력해주세요"/><br/>
+                <label for="password">비밀번호</label>
+                <input type="password" name="password" id="password" placeholder="비밀번호를 입력해주세요"/><br>
+                <!-- 사용자 입력은 아니고, 폼 처리시 반드시 필요한 값 : 개발자 세팅-->
+                <input type="hidden" name="secret_code" value="secret">
+                <label for="gender">성별</label>
+                <input type="radio" name="gender" value="F" checked/> 여성
+                <input type="radio" name="gender" value="M" /> 남성<br>
+                <label for="favorite"> 선호음료</label>
+                <!-- 같은 name을 가진 checkbox를 중복전송, 서버로는 문자열의 배열 파라메터를 전송-->
+                <input type="checkbox" name="favorite" value="americano">아메리카노
+                <input type="checkbox" name="favorite" value="latte">라떼
+                <input type="checkbox" name="favorite" value="ade">에이드
+                <input type="checkbox" name="favorite" value="tea">차 <br/>
+                <!--dropdown-->
+                <label for="telecom">통신사</label>
+                <select name="telecom">
+                    <!-- 실제 데이터는 option 태그로 설정-->
+                    <option value="S">SKT</option>
+                    <option value="K">KT</option>
+                    <option value="U">LG</option>
+                    <option value="E">ETC</option>
+                </select>
+                <input type="reset" value="다시작성"/>
+                <!--다시작성-->
+                <input type="submit" value="멤버쉽가입"/>
+
+
+            </fieldset>
+            </form>
         <p><a href="index.html">BIt Lounge</a></p>
-
-
     </body>
-
-
 </html>
