Add ids and classes

--- a/ex01/ex01/index.html
+++ b/ex01/ex01/index.html
@@ -3,8 +3,21 @@
 <head>
 	<title>Bit Lounge</title>
 	<meta http-equiv="Content_Type" content="text/html"; charset="UTF-8"/>
+	<!-- 2. page css: 단일 페이지내의 요소에 공통 적용
+	<style>
+		h1{
+			color : yellow;
+			background-color: black;
+		}
+	</style>
+	-->
+
 </head>
 <body>
+	<!-- 1. Inline Style : 태그에 스타일 부여, 편리하긴 하지만 웹표준 입장에선 좋지 않다.-->
+	<!--<h1 style="color:yellow; background-color:black">Welcome to the Lounge</h1>-->
+	<!-- 3. External CSS-->
+	<link rel="stylesheet" href="./CSS/style.css">
 	<h1>Welcome to the Lounge</h1>
 	<img src="./images/drinks.gif"/>
 	<p>
