기본선택자

--- a/ex01/ex01/elixir.html
+++ b/ex01/ex01/elixir.html
@@ -6,6 +6,38 @@
   </head>
   <body>
     <link rel="stylesheet" href="./CSS/style.css"/>
+    <Style>
+      /* id 셀렉터 : #id */
+      #green { /* id가 green인 요소*/
+        color: green;
+      }
+      #lightblue{
+        color: royalblue;
+      }
+      #blue{
+        color: purple;
+      }
+      #red{
+        color : red
+      }
+
+      /* Class selector : .클래스명 */
+      .beverage.green{
+        background-color: rgba(0, 255, 0, 0.1);
+      }
+      .beverage.lightblue{
+        background-color: rgba(0, 0, 255, 0.1);
+      }
+      .beverage.blue{
+        background-color: rgba(128, 0, 1238, 0.1);
+      }
+      .beverage.red{
+        background-color: rgba(255, 0, 0, 0.1);
+      }
+
+
+
+    </Style>
     <header>
     <h1>건강음료</h1>
     </header>
