--- a/ex01/ex01/elixir.html
+++ b/ex01/ex01/elixir.html
@@ -111,6 +111,37 @@
         margin-bottom: 10px,0;
       }
 
+      .seller img{
+        /* 공간 점유 방식을 변경
+        none : 공간점유하지않음
+        block : 공간 점유 방식을 blokc으로
+        inline : 공간 점유 방식을 inline으로 표시
+        */
+        /*display: none;*/
+        /*
+        visibillity 속성
+        visible : 표시
+        hidden : 표시하지 않음, 공간은 점유.
+        */
+        /*visibility: hidden;*/
+      }
+
+      /* background : 배경을 설정하는것*/
+      
+      body{
+        /*
+        background-image: url(./images/Landscape.jpg);
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position : bottom;
+        background-size: 100%;
+        */
+        /* 축약형 
+        background:url("./images/Landscape.jpg")
+        bottom / 100%  no-repeat fixed lightgray;
+        */
+      }
+
     </Style>
     <header>
     <h1>건강음료</h1>
