--- a/ex01/ex01/elixir.html
+++ b/ex01/ex01/elixir.html
@@ -142,6 +142,21 @@
         */
       }
 
+      /* float 속성으로 메뉴만들기 */
+      .menu > li{
+        float: left;
+        width: 80px;
+        height:30px;
+        text-align: center;
+        margin-top : 10px;
+      }
+
+      .beverage img{
+        float: right;
+        margin-right: 20px;
+      }
+
+
     </Style>
     <header>
     <h1>건강음료</h1>
