--- a/JS_codingEverybody/3 copy.html
+++ b/JS_codingEverybody/3 copy.html
@@ -16,20 +16,26 @@
     document.querySelector('body').style.backgroundColor='white';
     document.querySelector('body').style.color='black';
   ">  -->
-  <input type="button" value="night" id="night_day" onclick="
-  if(document.querySelector('#night_day').value ==='night'){
-    document.querySelector('body').style.backgroundColor='black';
-    document.querySelector('body').style.color='white';
-    document.querySelector('#night_day').value = 'day';
+  <input type="button" value="night" onclick="
+  var target = document.querySelector('body');
+  if(this.value ==='night'){
+    target.style.backgroundColor='black';
+    target.style.color='white';
+    this.value = 'day';
   } else {
-    document.querySelector('body').style.backgroundColor='white';
-    document.querySelector('body').style.color='black';
-    document.querySelector('#night_day').value = 'night';
-  }
-  " night_day <ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">JavaScript</a></li>
+    target.style.backgroundColor='white';
+    target.style.color='black';
+    this.value = 'night';
+  } ">
+
+
+
+
+
+  <ol>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
   </ol>
   <h2>JavaScript</h2>
   <p>
@@ -41,6 +47,17 @@
     different implementation of JavaScript, all based on the ECMAScript specification, with some engines not supporting
     the spec fully, and with many engines supporting additional features beyond ECMA.
   </p>
+
+  <input type="button" value="night" onclick="
+  if(this.value ==='night'){
+    target.style.backgroundColor='black';
+    target.style.color='white';
+    this.value = 'day';
+  } else {
+    target.style.backgroundColor='white';
+    target.style.color='black';
+    this.value = 'night';
+  } ">
 </body>
 
 </html>
