--- a/JS_codingEverybody/3 copy.html
+++ b/JS_codingEverybody/3 copy.html
@@ -18,14 +18,32 @@
   ">  -->
   <input type="button" value="night" onclick="
   var target = document.querySelector('body');
+  // input value가 night이면 배경색과 글자색을 변경.
   if(this.value ==='night'){
     target.style.backgroundColor='black';
     target.style.color='white';
     this.value = 'day';
+    
+    // querySelectorAll을 사용하면 문서 내 모든 태그를 리스트로 가져올수 있다.
+    // 모든 태그의 스타일 색상을 적용.
+    let alist = document.querySelectorAll('a');
+    let i = 0;
+    while(i<alist.length){
+      alist[i].style.color='powderblue';
+      i++;
+    }
+
   } else {
     target.style.backgroundColor='white';
     target.style.color='black';
     this.value = 'night';
+
+    let alist = document.querySelectorAll('a');
+    let i = 0;
+    while(i<alist.length){
+      alist[i].style.color='blue';
+      i++;
+    }
   } ">
 
 
