이벤트 처리

--- a/ex02-js/phone_shop.html
+++ b/ex02-js/phone_shop.html
@@ -31,7 +31,9 @@
 
 <body>
     <div id="product-info">
-        <img id="main-image" src="images/iphone-xs.jpeg" class="selected" title="iPhones XS">
+        <!-- 태그에 이벤트 리스너 붙이는 방법 1. inline Javascript . 추천하지 않음.-->
+        <img id="main-image" src="images/iphone-xs.jpeg" class="selected" onclick="alert(this.title)"
+            title="iPhones XS">
         <h2>iPhone Xs</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -66,13 +68,74 @@
 
         // 하단의 product 이미지들의 title속성도 변경해봅시다.
         let subs = document.getElementsByClassName("sub-image");
-        console.log("#class:",subs)
+        console.log("#class:", subs)
         // HTMLCOLLECTION에 직접 접근은 불가. Loop로 개별요소에 접근해야 한다.
-        for(let i= 0; i<subs.length; i++){
-            subs[i].setAttribute("title","사진:"+subs[i].getAttribute('title'));
+        for (let i = 0; i < subs.length; i++) {
+            subs[i].setAttribute("title", "사진:" + subs[i].getAttribute('title'));
         }
     }
-    testAttributes();
+    // testAttributes(); 
+
+    //이벤트 붙이기 두번째 방식
+    document.getElementById("main-image").onclick = function (event) {
+        console.log(event); // 이벤트 객체 
+
+        console.log('이벤트이름', event.name);
+        console.log('이벤트 발생객체', event.target);
+        // 이벤트 발생객체 : event.target
+        alert(event.target.title);
+
+    }
+    // 키보드 이벤트
+    // document.getElementById("keyword")
+    //     .onkeyup = function (event) {
+    //         // .onkeypress = function (event) {
+    //         console.log(event);
+    //         console.log(event.target);
+    //         console.log('눌러진 키:', event.keyCode);
+
+    //         let btn = document.querySelector("#btn-search");
+    //         btn.innerText = event.target.value + " 검색"
+    //     };
+
+    // 이벤트 리스너 부착 : 가장 추천하는 방식
+    window.addEventListener("load", function (event) {
+        //load 이벤트 -> 페이지 초기화를 담당.
+        document.getElementById("keyword")
+            .onkeyup = function (event) {
+                // .onkeypress = function (event) {
+                console.log(event);
+                console.log(event.target);
+                console.log('눌러진 키:', event.keyCode);
+
+                let btn = document.querySelector("#btn-search");
+                btn.innerText = event.target.value + " 검색"
+            };
+
+        // class가 sub-image인 모든 요소들 검색
+        let products = document.getElementsByClassName("sub-image");
+        console.log(products);
+        for (let i = 0; i < products.length; i++) {
+            //  개별 상품들 요소 확인
+            let product = products[i];
+            console.log(product);
+
+            //  이벤트 리스너 부착
+            product.addEventListener("click", function (event) {
+                //  이벤트 발생 객체 검색
+                let obj = event.target;
+                let mainImage = document.getElementById("main-image");
+                mainImage.setAttribute("src", obj.getAttribute("src"));
+                mainImage.setAttribute("title", obj.getAttribute("title"));
+
+                let title = document.querySelector("#product-info h2");
+                title.innerText = obj.getAttribute("title");
+            })
+        }
+    });
+
+
+
 </script>
 
 </html>
