--- a/ex01/ex01/form.html
+++ b/ex01/ex01/form.html
@@ -1,83 +1,140 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="ko">
-    <head>
-        <meta http-equiv="content type" content="text/html" charset="UTF-8"/>
-        <title>멤버쉽 가입</title>
-    </head>
-    <body>
-        <h1>멤버쉽 가입</h1>
-        <form name="registerForm"
-                method="POST"
-                action="/register.html">
-                <link rel="stylesheet" href="./CSS/style.css"/>
-                <Style>
-                    /* 속성 선택자 연습 */
-                    *[type]{
-                        /*type 속성이 있는 모든 태그 선택*/
-                        background-color: beige;
+
+<head>
+    <meta http-equiv="content type" content="text/html" charset="UTF-8" />
+    <title>멤버쉽 가입</title>
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <Style>
+        /* 속성 선택자 연습 */
+        *[type] {
+            /*type 속성이 있는 모든 태그 선택*/
+            background-color: beige;
+        }
+
+        input[type=text] {
+            /*type 속성이 text인 태그만 선택 */
+            background-color: lightgreen;
+        }
+
+        input[type=password] {
+            /*type 속성이 password인 태그 선택 */
+            background-color: lightblue;
+        }
+
+        /* 상태선택자 : 입력폼의 상태에 따른 선택 */
+        input:enabled {
+            /*입력 가능한 input태그를 선택한다.*/
+            background-color: white;
+        }
+
+        input:disabled {
+            /* 입력 불가능한 input태그 선택 */
+            background-color: lightgrey;
+        }
+
+        input:focus {
+            /*초점이 맞춰진 상태의 input 태그 선택*/
+            background-color: orange;
+        }
+    </Style>
+    <script>
+       function checkForm() {
+                //  폼 name으로 식별
+                let frm = document.registerForm;
+                console.log(frm);
+
+                //  userid 검증
+                let userid = frm.userid.value.trim();
+                //  길이 비교 4 ~ 10 이하 검증
+                if (userid.length < 4 ||
+                    userid.length > 10) {
+                    //  검증 실패
+                    alert("사용자 아이디는 4자 이상," +
+                        "10자 이하로 해 주세요");
+                    frm.userid.focus(); //  포커스 부여
+                    return false;
+                }
+
+                //  비밀번호 검증
+                let password = frm.password.value.trim();
+                if (password.length < 4 || password.length > 10) {
+                    alert("비밀번호는 4 ~ 10 자로 해주세요");
+                    frm.password.focus();
+                    return false;
+                }
+
+                //  선호 음료(favorite)는 최소 1개 이상 선택
+                let checkedCount = 0;
+                for (let i = 0; i < frm.favorite.length; i++) {
+                    // 개별 체크박스
+                    let cb = frm.favorite[i];
+                    if (cb.checked) {
+                        console.log(cb.value, "is checked!");
+                        checkedCount++;
                     }
+                }
 
-                    input[type=text]{
-                        /*type 속성이 text인 태그만 선택 */
-                        background-color: lightgreen;
-                    }
+                if (checkedCount === 0) {
+                    alert("최소 1개 이상의 음료를 선택 해야 합니다.");
+                    return false;
+                }
 
-                    input[type=password]{
-                        /*type 속성이 password인 태그 선택 */
-                        background-color: lightblue;
-                    }
+                //  통신사 선택(Select)
+                //  선택된 것의 인덱스 확인
+                let selectedIndex = frm.telecom.selectedIndex;
+                console.log("Selected Index:", selectedIndex);
+                let option = frm.telecom[selectedIndex];
+                alert("선택 통신사:", option.value);
 
-                    /* 상태선택자 : 입력폼의 상태에 따른 선택 */
-                    input:enabled{
-                        /*입력 가능한 input태그를 선택한다.*/
-                        background-color: white;
-                    }
-                    input:disabled{
-                        /* 입력 불가능한 input태그 선택 */
-                        background-color:lightgrey;
-                    }
-
-                    input:focus{
-                        /*초점이 맞춰진 상태의 input 태그 선택*/
-                        background-color: orange;
-                    }
+                return true;
+            }
 
 
-                </Style>
-            <fieldset><!--입력양식을 그룹화-->
-                <legend>회원가입</legend>
-                <label for="userId ">아이디</label>
-                <input type="text" name="userid" id="userid" placeholder="아이디를 입력해주세요"/><br/>
-                <label for="password">비밀번호</label>
-                <input type="password" name="password" id="password" placeholder="비밀번호를 입력해주세요"/><br>
+    </script>
+</head>
 
-                <label for="code">추천코드</label>
-                <input type="text" name="code" id="code" disabled/><br>
-                <!-- 사용자 입력은 아니고, 폼 처리시 반드시 필요한 값 : 개발자 세팅-->
-                <input type="hidden" name="secret_code" value="secret">
-                <label for="gender">성별</label>
-                <input type="radio" name="gender" value="F" checked/> 여성
-                <input type="radio" name="gender" value="M" /> 남성<br>
-                <label for="favorite"> 선호음료</label>
-                <!-- 같은 name을 가진 checkbox를 중복전송, 서버로는 문자열의 배열 파라메터를 전송-->
-                <input type="checkbox" name="favorite" value="americano">아메리카노
-                <input type="checkbox" name="favorite" value="latte">라떼
-                <input type="checkbox" name="favorite" value="ade">에이드
-                <input type="checkbox" name="favorite" value="tea">차 <br/>
-                <!--dropdown-->
-                <label for="telecom">통신사</label>
-                <select name="telecom">
-                    <!-- 실제 데이터는 option 태그로 설정-->
-                    <option value="S">SKT</option>
-                    <option value="K">KT</option>
-                    <option value="U">LG</option>
-                    <option value="E">ETC</option>
-                </select>
-                <input type="reset" value="다시작성"/>
-                <!--다시작성-->
-                <input type="submit" value="멤버쉽가입"/>
-            </fieldset>
-            </form>
-        <p><a href="index.html">BIt Lounge</a></p>
-    </body>
+<body>
+    <h1>멤버쉽 가입</h1>
+    <form name="registerForm" method="POST" action="/register.html" onsubmit="return checkForm()">
+        <!-- onsubmit이 false를 리턴하면 폼 전송하지 않음.-->
+
+        <fieldset>
+            <!--입력양식을 그룹화-->
+            <legend>회원가입</legend>
+            <label for="userId ">아이디</label>
+            <input type="text" name="userid" id="userid" placeholder="아이디를 입력해주세요" /><br />
+            <label for="password">비밀번호</label>
+            <input type="password" name="password" id="password" placeholder="비밀번호를 입력해주세요" /><br>
+
+            <label for="code">추천코드</label>
+            <input type="text" name="code" id="code" disabled /><br>
+            <!-- 사용자 입력은 아니고, 폼 처리시 반드시 필요한 값 : 개발자 세팅-->
+            <input type="hidden" name="secret_code" value="secret">
+            <label for="gender">성별</label>
+            <input type="radio" name="gender" value="F" checked /> 여성
+            <input type="radio" name="gender" value="M" /> 남성<br>
+            <label for="favorite"> 선호음료</label>
+            <!-- 같은 name을 가진 checkbox를 중복전송, 서버로는 문자열의 배열 파라메터를 전송-->
+            <input type="checkbox" name="favorite" value="americano">아메리카노
+            <input type="checkbox" name="favorite" value="latte">라떼
+            <input type="checkbox" name="favorite" value="ade">에이드
+            <input type="checkbox" name="favorite" value="tea">차 <br />
+            <!--dropdown-->
+            <label for="telecom">통신사</label>
+            <select name="telecom">
+                <!-- 실제 데이터는 option 태그로 설정-->
+                <option value="S">SKT</option>
+                <option value="K">KT</option>
+                <option value="U">LG</option>
+                <option value="E">ETC</option>
+            </select>
+            <input type="reset" value="다시작성" />
+            <!--다시작성-->
+            <input type="submit" value="멤버쉽가입" />
+        </fieldset>
+    </form>
+    <p><a href="index.html">BIt Lounge</a></p>
+</body>
+
 </html>
