--- a/responsive/index.html
+++ b/responsive/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./responsive_basic_style.css">
 </head>
 <body>
     <div id="container">
@@ -24,7 +25,7 @@
             </div>
             <div class="content">
                 <div class="photo">
-                    <img src="/images/tech01.jpg">
+                    <img src="./images/tech01.jpg">
                 </div>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pretium sem augue, ac vestibulum justo pharetra et. Donec pharetra mauris in purus elementum euismod. Sed efficitur posuere placerat. Nunc gravida, diam eu accumsan rhoncus, odio felis iaculis est, sed consectetur nibh tortor non diam. Nam suscipit maximus ligula, a iaculis metus maximus vel. Vestibulum tristique luctus lorem vel interdum. Mauris quis eleifend ex. Fusce est nibh, luctus et odio eu, placerat ultrices ante. Nam massa lorem, ullamcorper vel aliquam ac, aliquam in lacus. Aliquam convallis blandit iaculis. Vivamus leo lacus, efficitur a erat quis, euismod fermentum lorem. Fusce id felis et neque consectetur ullamcorper. Vestibulum a lobortis diam, eget sagittis libero. Nunc lobortis risus ac consequat mollis. Duis blandit libero in vehicula blandit. In placerat, sem et accumsan rhoncus, nunc augue luctus turpis, in interdum ex tortor id sapien.</p>
@@ -37,7 +38,7 @@
             </div>      
             <div class="content">
                 <div class="photo">
-                    <img src="/images/tech02.jpg">
+                    <img src="./images/tech02.jpg">
                 </div>
                 <div class="text">
                     <p>In consectetur felis sed ipsum eleifend, a mattis turpis efficitur. In semper tellus quis felis dignissim, in bibendum tellus dignissim. Phasellus venenatis justo purus, vel molestie ante pretium eget. Vivamus sit amet mauris non est vehicula porta a eu nulla. Sed consectetur diam vel aliquet euismod. Curabitur non turpis non sapien ultrices lacinia non nec metus. Nulla neque magna, pulvinar in finibus ac, sagittis nec orci. Aliquam sollicitudin dolor eget interdum pellentesque. Pellentesque sit amet tincidunt eros. Vestibulum a nisl erat. Sed in turpis lacus. Vivamus eget egestas nibh. Aliquam sem neque, tincidunt at fermentum eget, mollis nec velit. Mauris non faucibus nisl.</p>
@@ -50,20 +51,20 @@
             </div>
             <div class="content">
                 <div class="photo">
-                    <img src="/images/tech03.jpg">
+                    <img src="./images/tech03.jpg">
                 </div>
                 <div class="text">
                     <p>Phasellus ac eros nec lacus suscipit dapibus. Duis rhoncus neque eget arcu sagittis, id dictum libero tempus. Aenean a dignissim est. Praesent mattis lobortis leo in gravida. In quis est a tellus blandit rhoncus eu ac metus. In ac sem feugiat leo viverra pellentesque in in elit. Vivamus eu enim at tortor semper commodo at id sem. Aliquam imperdiet, nibh nec maximus pretium, arcu purus lobortis nisl, sed varius lacus eros ornare orci. Integer eget justo vitae libero commodo consequat. Proin varius, elit at dapibus dictum, dolor justo vestibulum massa, vitae cursus elit elit in eros. Suspendisse commodo pellentesque neque quis scelerisque. Morbi sit amet lectus placerat, varius purus vitae, dignissim mauris.</p>
                 </div>
             </div>
         </section>
-        <section id="section2">
+        <section id="section3">
             <div class="page-title">
                 <h1>Section 3</h1>
             </div> 
             <div class="content">
                 <div class="photo">
-                    <img src="/images/tech04.jpg">
+                    <img src="./images/tech04.jpg">
                 </div>
                 <div class="text">
                     <p>Phasellus ac eros nec lacus suscipit dapibus. Duis rhoncus neque eget arcu sagittis, id dictum libero tempus. Aenean a dignissim est. Praesent mattis lobortis leo in gravida. In quis est a tellus blandit rhoncus eu ac metus. In ac sem feugiat leo viverra pellentesque in in elit. Vivamus eu enim at tortor semper commodo at id sem. Aliquam imperdiet, nibh nec maximus pretium, arcu purus lobortis nisl, sed varius lacus eros ornare orci. Integer eget justo vitae libero commodo consequat. Proin varius, elit at dapibus dictum, dolor justo vestibulum massa, vitae cursus elit elit in eros. Suspendisse commodo pellentesque neque quis scelerisque. Morbi sit amet lectus placerat, varius purus vitae, dignissim mauris.</p>
