getting user name

--- a/Nomadcoder/MOMENTUM/index.html
+++ b/Nomadcoder/MOMENTUM/index.html
@@ -11,12 +11,14 @@
 
 <body>
   <!-- 1. HTML 작성 -->
-  <form id="login-form">
+  <form id="login-form" >
     <!-- HTML input기능을 이용하려면 form안에 있어야한다. -->
     <input required maxlength="15" type="text" placeholder="What is your Name?" />
     <button>Log in</button>
   </form>
-  <a href="https://nomadcoders.co">GO to course</a>
+  <h1 id="greeting" class="hidden"></h1>
+
+  <!-- <a href="https://nomadcoders.co">GO to course</a> -->
   <script src="./app.js"></script>
 </body>
 
