--- a/Nomadcoder/MOMENTUM/index.html
+++ b/Nomadcoder/MOMENTUM/index.html
@@ -16,11 +16,16 @@
     <input required maxlength="15" type="text" placeholder="What is your Name?" />
     <button>Log in</button>
   </form>
-  <h2 id="clock"></h2>
-  <h1 id="greeting" class="hidden"></h1>
+  <h2 id="clock">00:00:00</h2>
+  <h1 class="hidden" id="greeting" ></h1>
+  <div id="quote">
+    <span></span>
+    <span></span>
+  </div>
   <!-- <a href="https://nomadcoders.co">GO to course</a> -->
   <script src="./js/greeting.js"></script>
   <script src="./js/clock.js"></script>
+  <script src="./js/quotes.js"></script>
 
 </body>
 
