--- a/Nomadcoder/MOMENTUM/index.html
+++ b/Nomadcoder/MOMENTUM/index.html
@@ -25,7 +25,11 @@
   <div id="quote">
     <span></span>
     <span></span>
-  </div <!-- <a href="https://nomadcoders.co">GO to course</a> -->
+  </div>
+  <div id="weather">
+    <span></span>
+    <span></span>
+  </div>
   <script src="./js/greeting.js"></script>
   <script src="./js/clock.js"></script>
   <script src="./js/quotes.js"></script>
