--- a/Nomadcoder/MOMENTUM/index.html
+++ b/Nomadcoder/MOMENTUM/index.html
@@ -10,20 +10,23 @@
 </head>
 
 <body>
+  <div class="img-cover"></div>
   <!-- 1. HTML 작성 -->
   <h2 id="clock">00:00:00</h2>
   <form id="login-form" class="hidden">
     <!-- HTML input기능을 이용하려면 form안에 있어야한다. -->
-    <input required maxlength="15" type="text" placeholder="What is your Name?" />
+    <input id="inputName" required maxlength="15" type="text" placeholder="What is your Name?" />
     <button>Log in</button>
   </form>
   <h1 class="hidden" id="greeting"></h1>
-  <form id="todo-form">
-    <input type="text" placeholder="Write here a to do and press Enter" required>
-  </form>
-  <ul id="todo-list"> </ul>
+
+    <form id="todo-form">
+      <input type="text" placeholder="Write here a to do and press Enter" required>
+    </form>
+    <ul id="todo-list"> </ul>
+
   <div id="quote">
-    <span></span>
+    <span></span><br>
     <span></span>
   </div>
   <div id="weather">
